# sgemm-gpu

./: .clang-format  .gitignore  CMakeLists.txt  kernel.cu  kernel.h  kernel11.cu  kernel11.h  sgemm_gpu.cu  sgemm_gpu.h  test.cpp  utils.h
include/: sgemm_gpu.h
src/: sgemm_gpu.cu
src/sgemm_kernels/: sgemm_kernels.cuh  sgemm_nn_128x128_batch_float4.cu  sgemm_nn_32x32_batch_float4.cu
test/: cuda_helper.h  sgemm_cpu.c  test.cpp  time_helper.h
